# diffres

./: README.md  pyproject.toml
.github/workflows/: unittest.yml
demos/: demo1.py  diff_loss.py  gaussian_mixture.ipynb  gm_resampling.py  ideal_case.py  lokta.py  two_rings.py
demos/pendulum/: diffusion.py
diffres/: feynman_kac.py  gaussian_filters.py  integators.py  nns.py  resampling.py  tools.py  typings.py
experiments/: rnd_keys.npy  run_gms.sh  run_lgssm.sh  run_lokta.sh  run_times.sh
experiments/gms/: baselines.py  diffusion.py  gumbel.py  ot.py  soft.py
experiments/lgssm/: baselines.py  diffusion.py  gumbel.py  ot.py  soft.py
experiments/lokta/: diffusion.py  gumbel.py  ot.py  soft.py
experiments/pendulum/: diffusion.py
experiments/profiling_time/: compare_time.py
experiments/summary/: plot_lgssm_loss_landscapes.py  plot_lokta.py  plot_lokta_preds.py  plot_time.py  print_gms_errs.py  print_lgssm_errs.py  print_lokta.py
presentation/: resampling_demo.py
tests/: test_filters.py  test_integrators.py  test_resampling.py
